--- a/ChiffresEtLettres/ChiffresEtLettres/CompteEstBon.xaml
+++ b/ChiffresEtLettres/ChiffresEtLettres/CompteEstBon.xaml
@@ -1,7 +1,7 @@
-﻿<Window x:Class="ChiffresEtLettres.MainWindow"
+﻿<Window x:Class="ChiffresEtLettres.CompteEstBon"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        Title="CompteEstBon" Height="600" Width="400">
     <Grid>
         
     </Grid>
