Modification du menu et création du moteur
Modification du menu (Ouverture de boite de dialogue)
Création de la classe de moteur de jeu
Création de la classe de joueur

--- a/ChiffresEtLettres/ChiffresEtLettres/Menu.xaml
+++ b/ChiffresEtLettres/ChiffresEtLettres/Menu.xaml
@@ -3,9 +3,9 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Des chiffres et des lettres" Height="296" Width="400" ResizeMode="NoResize">
     <Grid>
-        <Button Content="Jouer contre un humain" Margin="100,100,100,0" VerticalAlignment="Top"/>
-        <Button Content="Jouer contre l'ordinateur" Margin="100,150,100,0" VerticalAlignment="Top"/>
-        <Button Content="Quitter" Margin="100,200,100,0" VerticalAlignment="Top"/>
+        <Button x:Name="newHumanGame" Content="Jouer contre un humain" Margin="100,100,100,0" VerticalAlignment="Top" Click="newHumanGame_Click"/>
+        <Button x:Name="newBotGame" Content="Jouer contre l'ordinateur" Margin="100,150,100,0" VerticalAlignment="Top" Click="newBotGame_Click"/>
+        <Button x:Name="quit" Content="Quitter" Margin="100,200,100,0" VerticalAlignment="Top" Click="quit_Click"/>
 
     </Grid>
 </Window>
