--- a/ChiffresEtLettres/ChiffresEtLettres/PlayerSetup.xaml
+++ b/ChiffresEtLettres/ChiffresEtLettres/PlayerSetup.xaml
@@ -1,8 +1,33 @@
 ﻿<Window x:Class="ChiffresEtLettres.PlayerSetup"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Nouveau joueur" Height="200" Width="300" ShowInTaskbar="False" ResizeMode="NoResize" WindowStartupLocation="CenterOwner">
+        Title="Nouveau joueur" Height="150" Width="300" ShowInTaskbar="False" ResizeMode="NoResize" WindowStartupLocation="CenterOwner">
     <Grid>
-        
+        <TextBox x:Name="playerName" Height="23" Margin="50,25,50,0" TextWrapping="Wrap" VerticalAlignment="Top" x:FieldModifier="private">
+            <TextBox.Style>
+                <Style TargetType="TextBox" xmlns:sys="clr-namespace:System;assembly=mscorlib">
+                    <Style.Resources>
+                        <VisualBrush x:Key="CueBannerBrush" AlignmentX="Left" AlignmentY="Center" Stretch="None">
+                            <VisualBrush.Visual>
+                                <Label Content="Nom du joueur" Foreground="LightGray" />
+                            </VisualBrush.Visual>
+                        </VisualBrush>
+                    </Style.Resources>
+                    <Style.Triggers>
+                        <Trigger Property="Text" Value="{x:Static sys:String.Empty}">
+                            <Setter Property="Background" Value="{StaticResource CueBannerBrush}" />
+                        </Trigger>
+                        <Trigger Property="Text" Value="{x:Null}">
+                            <Setter Property="Background" Value="{StaticResource CueBannerBrush}" />
+                        </Trigger>
+                        <Trigger Property="IsKeyboardFocused" Value="True">
+                            <Setter Property="Background" Value="White" />
+                        </Trigger>
+                    </Style.Triggers>
+                </Style>
+            </TextBox.Style>
+        </TextBox>
+        <Button x:Name="okButton" Content="Valider" HorizontalAlignment="Left" Margin="50,75,0,0" VerticalAlignment="Top" Width="75" Click="okButton_Click"/>
+        <Button x:Name="cancelButton" Content="Annuler" HorizontalAlignment="Right" Margin="0,75,50,0" VerticalAlignment="Top" Width="75" Click="cancelButton_Click"/>
     </Grid>
 </Window>
