--- a/ChiffresEtLettres/ChiffresEtLettres/CompteEstBon.xaml
+++ b/ChiffresEtLettres/ChiffresEtLettres/CompteEstBon.xaml
@@ -1,8 +1,17 @@
 ﻿<Window x:Class="ChiffresEtLettres.CompteEstBon"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="CompteEstBon" Height="600" Width="400">
+        Title="Le Compte est bon" Height="600" Width="800" WindowStartupLocation="CenterScreen">
     <Grid>
-        
+        <Grid x:Name="calculGrid" Margin="10,103,124,10"/>
+        <Grid x:Name="mathGrid" Margin="732,103,10,10" Width="50">
+            <Button x:Name="plusButton" Content="+" Margin="0,10,10,0" VerticalAlignment="Top" Height="30" HorizontalAlignment="Right" Width="30" FontWeight="Bold" FontSize="18" IsEnabled="False"/>
+            <Button x:Name="minusButton" Content="-" Margin="0,45,10,0" VerticalAlignment="Top" Height="30" HorizontalAlignment="Right" Width="30" FontWeight="Bold" FontSize="18" RenderTransformOrigin="0.367,1.167" IsEnabled="False"/>
+            <Button x:Name="multiplyButton" Content="x" Margin="0,80,10,0" VerticalAlignment="Top" Height="30" HorizontalAlignment="Right" Width="30" FontWeight="Bold" FontSize="18" IsEnabled="False"/>
+            <Button x:Name="divideButton" Content="/" Margin="0,115,10,0" VerticalAlignment="Top" Height="30" HorizontalAlignment="Right" Width="30" FontWeight="Bold" FontSize="18" IsEnabled="False"/>
+        </Grid>
+        <Grid x:Name="numbersGrid" HorizontalAlignment="Left" Height="88" Margin="10,10,0,0" VerticalAlignment="Top" Width="772">
+            <Label x:Name="numberToReachLabel" Content="" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
+        </Grid>
     </Grid>
 </Window>
