--- a/ChiffresEtLettres/ChiffresEtLettres/CompteEstBonWindow.xaml
+++ b/ChiffresEtLettres/ChiffresEtLettres/CompteEstBonWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="ChiffresEtLettres.CompteEstBon"
+﻿<Window x:Class="ChiffresEtLettres.CompteEstBonWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Le Compte est bon" Height="600" Width="800" WindowStartupLocation="CenterScreen">
@@ -12,6 +12,7 @@
         </Grid>
         <Grid x:Name="numbersGrid" HorizontalAlignment="Left" Height="88" Margin="10,10,0,0" VerticalAlignment="Top" Width="772">
             <Label x:Name="numberToReachLabel" Content="" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
+            <Label x:Name="numberLabel" Content="" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Height="30" Width="50"/>
         </Grid>
     </Grid>
 </Window>
