--- a/Countdown/Countdown/App.xaml
+++ b/Countdown/Countdown/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="ChiffresEtLettres.App"
+﻿<Application x:Class="Countdown.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="Menu.xaml">
