--- a/Countdown/Countdown/LongestWordWindow.xaml
+++ b/Countdown/Countdown/LongestWordWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="ChiffresEtLettres.MotPlusLong"
+﻿<Window x:Class="Countdown.LongestWordWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MotPlusLong" Height="300" Width="300">
