--- a/Countdown/Countdown/Menu.xaml
+++ b/Countdown/Countdown/Menu.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Name="menuWindow" x:Class="ChiffresEtLettres.MainWindow"
+﻿<Window x:Name="menuWindow" x:Class="Countdown.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Des chiffres et des lettres" Height="296" Width="400" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
