--- a/Countdown/Countdown/LongestWordWindow.xaml
+++ b/Countdown/Countdown/LongestWordWindow.xaml
@@ -1,8 +1,18 @@
 ﻿<Window x:Class="Countdown.LongestWordWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MotPlusLong" Height="300" Width="300">
+        Title="MotPlusLong" Height="300" Width="346" IsEnabled="True">
     <Grid>
-        
+        <Button Height="22" HorizontalAlignment="Left" Margin="16,17,0,0" Name="button1" VerticalAlignment="Top" Width="24" Click="button1_Click" DataContext="{Binding}" />
+        <Button Height="22" HorizontalAlignment="Right" Margin="0,17,255,0" Name="button2" VerticalAlignment="Top" Width="24" IsEnabled="True" />
+        <Button Height="22" HorizontalAlignment="Left" Margin="75,17,0,0" Name="button3" VerticalAlignment="Top" Width="24" IsEnabled="True" />
+        <Button Height="22" HorizontalAlignment="Left" Margin="105,17,0,0" Name="button4" VerticalAlignment="Top" Width="24" IsEnabled="True" />
+        <Button Height="22" HorizontalAlignment="Left" Margin="135,17,0,0" Name="button5" VerticalAlignment="Top" Width="24" IsEnabled="True" />
+        <Button Height="22" HorizontalAlignment="Left" Margin="165,17,0,0" Name="button6" VerticalAlignment="Top" Width="24" IsEnabled="True" />
+        <Button Height="22" HorizontalAlignment="Left" Margin="195,17,0,0" Name="button7" VerticalAlignment="Top" Width="24" IsEnabled="True" />
+        <Button Height="22" HorizontalAlignment="Left" Margin="225,17,0,0" Name="button8" VerticalAlignment="Top" Width="24" IsEnabled="True" />
+        <Button Height="22" HorizontalAlignment="Left" Margin="255,17,0,0" Name="button9" VerticalAlignment="Top" Width="24" IsEnabled="True" />
+        <Button Height="22" HorizontalAlignment="Left" Margin="284,17,0,0" Name="button10" VerticalAlignment="Top" Width="24" IsEnabled="True" />
+        <Label Height="28" HorizontalAlignment="Left" Margin="16,101,0,0" Name="label1" VerticalAlignment="Top" Width="296" />
     </Grid>
 </Window>
