--- a/Countdown/Countdown/CountdownWindow.xaml
+++ b/Countdown/Countdown/CountdownWindow.xaml
@@ -1,9 +1,9 @@
 ﻿<Window x:Class="Countdown.CountdownWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Le Compte est bon" Height="403" Width="388" WindowStartupLocation="CenterScreen">
+        Title="Le Compte est bon" Height="446" Width="388" WindowStartupLocation="CenterScreen">
     <Grid>
-        <Grid VerticalAlignment="Bottom" HorizontalAlignment="Center">
+        <Grid VerticalAlignment="Top" HorizontalAlignment="Center" Margin="30,0">
             <Grid x:Name="calculGrid" Margin="10,103,0,0" Width="256" Height="270" VerticalAlignment="Top" HorizontalAlignment="Left"/>
             <Grid x:Name="mathGrid" Margin="271,103,0,0" Width="50" Height="273" VerticalAlignment="Top" HorizontalAlignment="Left">
                 <Button x:Name="plusButton" Content="+" Margin="0,10,10,0" VerticalAlignment="Top" Height="30" HorizontalAlignment="Right" Width="30" FontWeight="Bold" FontSize="18" IsEnabled="False"/>
@@ -16,5 +16,7 @@
             <Label x:Name="numberToReachLabel" Content="" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
             <Label x:Name="numberLabel" Content="" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Height="30" Width="40"/>
         </Grid>
+        <Button x:Name="confirmButton" Content="Valider" HorizontalAlignment="Right" Margin="10,0,10,10" VerticalAlignment="Bottom" Width="75" Height="23" Click="confirmButton_Click" IsEnabled="False"/>
+        <Button x:Name="cancelButton" Content="Annuler" HorizontalAlignment="Right" Margin="10,0,95,10" VerticalAlignment="Bottom" Width="75" Height="23" Click="cancelButton_Click" IsEnabled="False"/>
     </Grid>
 </Window>
