--- a/Countdown/Countdown/LongestWordWindow.xaml
+++ b/Countdown/Countdown/LongestWordWindow.xaml
@@ -4,15 +4,20 @@
         Title="MotPlusLong" Height="300" Width="346" IsEnabled="True">
     <Grid>
         <Button Height="22" HorizontalAlignment="Left" Margin="16,17,0,0" Name="button1" VerticalAlignment="Top" Width="24" Click="button1_Click" DataContext="{Binding}" />
-        <Button Height="22" HorizontalAlignment="Right" Margin="0,17,255,0" Name="button2" VerticalAlignment="Top" Width="24" IsEnabled="True" />
-        <Button Height="22" HorizontalAlignment="Left" Margin="75,17,0,0" Name="button3" VerticalAlignment="Top" Width="24" IsEnabled="True" />
-        <Button Height="22" HorizontalAlignment="Left" Margin="105,17,0,0" Name="button4" VerticalAlignment="Top" Width="24" IsEnabled="True" />
-        <Button Height="22" HorizontalAlignment="Left" Margin="135,17,0,0" Name="button5" VerticalAlignment="Top" Width="24" IsEnabled="True" />
-        <Button Height="22" HorizontalAlignment="Left" Margin="165,17,0,0" Name="button6" VerticalAlignment="Top" Width="24" IsEnabled="True" />
-        <Button Height="22" HorizontalAlignment="Left" Margin="195,17,0,0" Name="button7" VerticalAlignment="Top" Width="24" IsEnabled="True" />
-        <Button Height="22" HorizontalAlignment="Left" Margin="225,17,0,0" Name="button8" VerticalAlignment="Top" Width="24" IsEnabled="True" />
-        <Button Height="22" HorizontalAlignment="Left" Margin="255,17,0,0" Name="button9" VerticalAlignment="Top" Width="24" IsEnabled="True" />
-        <Button Height="22" HorizontalAlignment="Left" Margin="284,17,0,0" Name="button10" VerticalAlignment="Top" Width="24" IsEnabled="True" />
-        <Label Height="28" HorizontalAlignment="Left" Margin="16,101,0,0" Name="label1" VerticalAlignment="Top" Width="296" />
+        <Button Height="22" HorizontalAlignment="Left" Margin="45,17,0,0" Name="button2" VerticalAlignment="Top" Width="24" IsEnabled="True" Click="button2_Click" />
+        <Button Height="22" HorizontalAlignment="Left" Margin="75,17,0,0" Name="button3" VerticalAlignment="Top" Width="24" IsEnabled="True" Click="button3_Click" />
+        <Button Height="22" HorizontalAlignment="Left" Margin="105,17,0,0" Name="button4" VerticalAlignment="Top" Width="24" IsEnabled="True" Click="button4_Click" />
+        <Button Height="22" HorizontalAlignment="Left" Margin="135,17,0,0" Name="button5" VerticalAlignment="Top" Width="24" IsEnabled="True" Click="button5_Click" />
+        <Button Height="22" HorizontalAlignment="Left" Margin="165,17,0,0" Name="button6" VerticalAlignment="Top" Width="24" IsEnabled="True" Click="button6_Click" />
+        <Button Height="22" HorizontalAlignment="Left" Margin="195,17,0,0" Name="button7" VerticalAlignment="Top" Width="24" IsEnabled="True" Click="button7_Click" />
+        <Button Height="22" HorizontalAlignment="Left" Margin="225,17,0,0" Name="button8" VerticalAlignment="Top" Width="24" IsEnabled="True" Click="button8_Click" />
+        <Button Height="22" Margin="255,17,0,0" Name="button9" VerticalAlignment="Top" IsEnabled="True" Click="button9_Click" HorizontalAlignment="Left" Width="24" />
+        <Button Height="22" HorizontalAlignment="Left" Margin="284,17,0,0" Name="button10" VerticalAlignment="Top" Width="24" IsEnabled="True" Click="button10_Click" />
+        <Label Height="28" HorizontalAlignment="Left" Margin="16,144,0,0" Name="label1" VerticalAlignment="Top" Width="296" />
+        <Button Content="Valide" Height="23" HorizontalAlignment="Right" Margin="0,196,45,0" Name="validate" VerticalAlignment="Top" Width="75" Click="validate_Click" />
+        <Button Content="Effacer tout" Height="23" HorizontalAlignment="Left" Margin="16,226,0,0" Name="button11" VerticalAlignment="Top" Width="143" Click="button11_Click" />
+        <Button Content="Effacer dernière lettre" Height="23" HorizontalAlignment="Left" Margin="16,196,0,0" Name="button12" VerticalAlignment="Top" Width="143" Click="button12_Click" />
+        <Button Content="Consonne" Height="23" HorizontalAlignment="Left" Margin="16,70,0,0" Name="consonne" VerticalAlignment="Top" Width="75" Click="consonne_Click" />
+        <Button Content="Voyelle" Height="23" HorizontalAlignment="Right" Margin="0,70,45,0" Name="voyelle" VerticalAlignment="Top" Width="75" Click="voyelle_Click" />
     </Grid>
 </Window>
