--- a/Countdown/Countdown/CountdownResultWindow.xaml
+++ b/Countdown/Countdown/CountdownResultWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Résultats" Height="300" Width="300" WindowStartupLocation="CenterScreen" SizeToContent="WidthAndHeight">
-    <Grid>
+    <Grid x:Name="grid">
         
     </Grid>
 </Window>
