--- a/Countdown/Countdown/Menu.xaml
+++ b/Countdown/Countdown/Menu.xaml
@@ -4,8 +4,8 @@
         Title="Des chiffres et des lettres" Height="296" Width="400" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid>
         <Label Content="Des Chiffres et des Lettres" HorizontalAlignment="Center" Margin="0,25,0,0" VerticalAlignment="Top" FontSize="18"/>
-        <Button x:Name="newHumanGame" Content="Jouer contre un humain" Margin="100,100,100,0" VerticalAlignment="Top" Click="newHumanGame_Click"/>
-        <Button x:Name="newBotGame" Content="Jouer contre l'ordinateur" Margin="100,150,100,0" VerticalAlignment="Top" Click="newBotGame_Click"/>
+        <Button x:Name="newCountdownGame" Content="Jouer au Compte est bon" Margin="100,100,100,0" VerticalAlignment="Top" Click="countdownGame_Click"/>
+        <Button x:Name="newLongestwordGame" Content="Jouer au Mot le plus long" Margin="100,150,100,0" VerticalAlignment="Top" Click="longestwordGame_Click"/>
         <Button x:Name="quit" Content="Quitter" Margin="100,200,100,0" VerticalAlignment="Top" Click="quit_Click"/>
 
     </Grid>
