--- a/Countdown/Countdown/LongestWordWindow.xaml
+++ b/Countdown/Countdown/LongestWordWindow.xaml
@@ -19,5 +19,6 @@
         <Button Content="Effacer dernière lettre" Height="23" HorizontalAlignment="Left" Margin="16,196,0,0" Name="button12" VerticalAlignment="Top" Width="143" Click="button12_Click" />
         <Button Content="Consonne" Height="23" HorizontalAlignment="Left" Margin="16,70,0,0" Name="consonne" VerticalAlignment="Top" Width="75" Click="consonne_Click" />
         <Button Content="Voyelle" Height="23" HorizontalAlignment="Right" Margin="0,70,45,0" Name="voyelle" VerticalAlignment="Top" Width="75" Click="voyelle_Click" />
+        <Button Content="Solutions" Height="23" HorizontalAlignment="Right" Margin="0,226,45,0" Name="button13" VerticalAlignment="Top" Width="75" Click="solutions_Click" />
     </Grid>
 </Window>
